--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "chroma-js": "^2.4.2",
     "cors-anywhere": "^0.4.4",
     "hoist-non-react-statics": "^3.3.2",
+    "lodash": "^4.17.21",
     "prettier": "^2.6.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
